docs/4.22/nodes/pods/run_once_duration_override/run-once-duration-override-release-notes.md
Cluster administrators can use the Run Once Duration Override Operator to force a limit on the time that run-once pods can be active. After the time limit expires, the cluster tries to terminate the run-once pods. The main reason to have such a limit is to prevent tasks such as builds to run for an excessive amount of time.

To apply the run-once duration override from the Run Once Duration Override Operator to run-once pods, you must enable it on each applicable namespace.

These release notes track the development of the Run Once Duration Override Operator for OpenShift Container Platform.

For an overview of the Run Once Duration Override Operator, see [About the Run Once Duration Override Operator](../../../nodes/pods/run_once_duration_override/index.xml#run-once-about_run-once-duration-override-about).

# Run Once Duration Override Operator 1.4.1

Review the features, enhancements, and advisory for the release of Run Once Duration Override Operator 1.4.1.

Issued: 17 June 2026

The following advisory is available for the Run Once Duration Override Operator 1.4.1:

- [RHBA-2026:26526](https://access.redhat.com/errata/RHBA-2026:26526)

## New features and enhancements

- This release of the Run Once Duration Override Operator updates the Kubernetes version to 1.35.

## Bug fixes

- This release of the Run Once Duration Override Operator addresses several Common Vulnerabilities and Exposures (CVEs).

# Run Once Duration Override Operator 1.4.0

Review the features, enhancements, and advisory for the release of Run Once Duration Override Operator 1.4.0.

Issued: 12 February 2026

The following advisory is available for the Run Once Duration Override Operator 1.4.0:

- [RHBA-2026:2649](https://access.redhat.com/errata/RHBA-2026:2649)

## New features and enhancements

- This release of the Run Once Duration Override Operator updates the Kubernetes version to 1.34.

- Users should set `.spec.managementState: Managed` in Run Once Duration Override Operator 1.4.0 custom resources (CR). In a future release, the `spec.managementState` field in the Run Once Duration Override Operator CR will be required to be set to `Managed`.

## Bug fixes

- This release of the Run Once Duration Override Operator addresses several Common Vulnerabilities and Exposures (CVEs).
